[package]
name = "mps"
version = "0.1.0"
license = "MIT AND BSD-3-Clause"
readme = "README.md"
description = """
Rust bindings to the memory pool system:
https://www.ravenbrook.com/project/mps/
"""
authors = ["Techcable <Techcable@techcable.net>"]
edition = "2018"
# Unstable
publish = false

[dependencies]
mps-sys = { path = "mps-sys" }
zerogc = "0.2.0-alpha.3"
arrayvec = "0.7"
thiserror = "^1"

[workspace]


[profile.dev.build-override]
# We need optimizations to make bindgen run fast
opt-level = 3